<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.pda.CustomerLoginRegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/string_dedcforimage"
        android:src="@mipmap/splashlogo_round" />

    <TextView
        android:id="@+id/customer_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:fontFamily="@font/caviardreams"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/colortext"
        android:textSize="22sp" />


    <EditText
        android:id="@+id/customer_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_status"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:fontFamily="@font/caviardreams"
        android:hint="@string/emailedittext"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/customer_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:fontFamily="@font/caviardreams"
        android:hint="@string/passwordedittext"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/customer_login_btn"
        style="@style/loginregisterbuttons"
        android:layout_below="@+id/customer_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="@drawable/btnbackground2"
        android:text="@string/loginedittext"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/customer_register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/caviardreams"
        android:text="@string/don_t_have_an_account_textvies"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="15sp" />

    <Button
        android:id="@+id/customer_register_btn"
        style="@style/loginregisterbuttons"
        android:layout_below="@+id/customer_register_link"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:background="@drawable/btnbackground"
        android:text="@string/registerbtn" />
</RelativeLayout>
