<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.pda.WelcomeActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/string_dedcforimage"
        android:src="@mipmap/splashlogo_round" />
    <TextView
        android:id="@+id/splashname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:fontFamily="@font/caviardreams"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/colortext"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/customer_welcome_btn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="131dp"
        android:text="@string/imcustomer"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/btnbackground"
        android:textSize="15sp"
        android:fontFamily="@font/caviardreams"/>

    <Button
        android:id="@+id/driver_welcome_btn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_above="@+id/customer_welcome_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:text="@string/imdriver"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/btnbackground2"
        android:textSize="15sp"
        android:fontFamily="@font/caviardreams"/>
</RelativeLayout>
